# actions

./: CLAUDE.md  PROMPT.md  pyproject.toml
.github/workflows/: build-push.yml
apps/actions-api/: auto_remediation.py  config.py  database.py  guardrails.py  k8s_client.py  kafka_consumer.py  main.py  models.py  rbac.py  requirements.txt  schemas.py  ssot_client.py
apps/ops-ui/: Dockerfile  entity.html  index.html  nginx.conf
apps/ops-ui/css/: styles.css
apps/ops-ui/js/: api.js  app.js  config.js
config/: auto-remediation.yaml  rbac.yaml
documentation/contracts/: ACTION_SCHEMA.md  RBAC_POLICY.md
documentation/progress/: ARCHITECTURE_DESIRED.md
documentation/sprint/: ROADMAP.md
documentation/sprint/sprint1/: PLAN.md  REVIEW.md
documentation/sprint/sprint2/: PLAN.md  REVIEW.md
documentation/sprint/sprint3/: PLAN.md  REVIEW.md
documentation/sprint/sprint4/: PLAN.md  REVIEW.md
documentation/sprint/sprint5/: PLAN.md
k8s/: namespace.yaml
k8s/actions-api/: configmap.yaml  deployment.yaml  service.yaml
k8s/ops-ui/: deployment.yaml  service.yaml
k8s/postgres/: service.yaml  statefulset.yaml
k8s/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
tests/e2e/: conftest.py  test_actions_api.py  test_auto_remediation.py  test_ops_ui.py  test_recommendations.py
